@@ -8,10 +8,9 @@ package com.powsybl.dynamicsimulation;
 
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.Supplier;
 
-import com.google.common.base.Supplier;
 import com.google.common.base.Suppliers;
-import com.google.common.collect.ImmutableMap;
 import com.powsybl.commons.config.PlatformConfig;
 import com.powsybl.commons.extensions.Extension;
 import com.powsybl.commons.extensions.ExtensionConfigLoader;
@@ -87,7 +86,7 @@ public class DynamicSimulationParameters extends AbstractDynamicSimulationParame
 
     @Override
     protected Map<String, Object> toMap() {
-        return ImmutableMap.of("startTime", getStartTime(),
+        return Map.of("startTime", getStartTime(),
             "stopTime", getStopTime());
     }
 
